--- a/style02.css
+++ b/style02.css
@@ -90,6 +90,17 @@ p2{
     font-size: 18px;
       
   }
+p3{
+      text-align: left;
+      margin-left: 10px;
+      width: 1230px;
+      border: 0px solid #4CAF50;
+      color:rgb(102, 0, 51);
+      background-color:(100, 255, 56) ;
+      font-family: 'Times New Roman';
+    font-size: 22px;
+      
+  }
   #testP{
     background-color: rgb(255, 255, 102);
   }
